細かいユーティリティなどの追加、
形状の選択に対応

--- a/SvgMakerCore/App.xaml
+++ b/SvgMakerCore/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:SvgMakerCore"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Controls/GeometryStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+         </ResourceDictionary>
     </Application.Resources>
 </Application>
