--- a/SvgMakerCore/MainWindow.xaml
+++ b/SvgMakerCore/MainWindow.xaml
@@ -15,40 +15,6 @@
             <Setter Property="HorizontalAlignment" Value="Right"/>
             <Setter Property="Width" Value="150"/>
         </Style>
-        
-        <Style TargetType="ItemsControl" x:Key="PointsListStyle">
-            <Setter Property="Visibility" Value="{Binding IsSelected , 
-                                                          RelativeSource={RelativeSource FindAncestor , AncestorType=ListViewItem},
-                                                          Converter={StaticResource BooleanToVisibilityConverter}}"/>
-            <Setter Property="ItemTemplate">
-                <Setter.Value>
-                    <DataTemplate DataType="{x:Type Point}">
-                        <controls:MoveablePoint X="{Binding X , Mode=TwoWay}"
-                                                Y="{Binding Y , Mode=TwoWay}"
-                                                Minimum="0,0"
-                                                Maximum="512,512"
-                                                Size="8"
-                                                GridSnap="{Binding DataContext.GridSize , RelativeSource={RelativeSource FindAncestor , AncestorType=Window}}"
-                                                Foreground="Red"/>
-                    </DataTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <DataTemplate DataType="{x:Type svgMakerCore:Geometry2DVm}">
-            <Grid>
-                <Path Stroke="Black" Data="{Binding Geometry}" StrokeThickness="1"/>
-                <controls:MoveablePoint DataContext="{Binding Center}"
-                                        X="{Binding X , Mode=TwoWay}"
-                                        Y="{Binding Y , Mode=TwoWay}"
-                                        Minimum="0,0"
-                                        Maximum="512,512"
-                                        Size="12"
-                                        GridSnap="{Binding DataContext.GridSize , RelativeSource={RelativeSource FindAncestor , AncestorType=Window}}"
-                                        Foreground="Blue"/>
-                <ItemsControl ItemsSource="{Binding Points}" Style="{StaticResource PointsListStyle}"/>
-            </Grid>
-        </DataTemplate>
     </Window.Resources>
 
     <Window.DataContext>
@@ -68,21 +34,17 @@
                     <ScaleTransform ScaleX="{Binding Scale}" ScaleY="{Binding Scale}" CenterX="128" CenterY="0"/>
                 </Border.LayoutTransform>
 
-                <ItemsControl ItemsSource="{Binding ItemsSource}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <controls:GridCanvas 
-                                GridInterval="{Binding GridSize}" 
-                                IsDash="{Binding IsDash}" 
-                                IsDrawGrid="True" 
-                                DashA="{Binding DashLineSize}"
-                                DashB="{Binding DashWhiteSpaceSize}"
-                                GridBrush="YellowGreen"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
+                <Grid>
+                    <controls:GridRenderer 
+                        GridInterval="{Binding GridSize}" 
+                        IsDash="{Binding IsDash}" 
+                        IsDrawGrid="True" 
+                        DashA="{Binding DashLineSize}"
+                        DashB="{Binding DashWhiteSpaceSize}"
+                        GridBrush="YellowGreen"/>
 
-                </ItemsControl>
-
+                    <controls:GeometryCanvas ItemsSource="{Binding ItemsSource}"/>
+                </Grid>
             </Border>
         </ScrollViewer>
         
@@ -122,6 +84,26 @@
                     <Slider Value="{Binding DashWhiteSpaceSize}" Minimum="2" Maximum="20" Style="{StaticResource RightControlStyle}"/>
                 </StackPanel>
             </GroupBox>
+            
+            <StackPanel Orientation="Horizontal">
+                <Button Content="Undo" Command="{Binding UndoCommand}"/>
+                <Button Content="Redo" Command="{Binding RedoCommand}"/>
+                <Button Content="Execute" Command="{Binding ExecuteCommand}"/>
+            </StackPanel>
+            <ListView ItemsSource="{Binding OperationManager}" 
+                      MaxHeight="512"
+                      ScrollViewer.VerticalScrollBarVisibility ="Auto"
+                      ScrollViewer.HorizontalScrollBarVisibility ="Auto">
+                <ListView.ItemTemplate>
+                    <ItemContainerTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding}"/>
+                            <Separator/>
+                        </StackPanel>
+                    </ItemContainerTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
         </StackPanel>
     </Grid>
 </Window>
